- Fixed bug #50458 (PDO::FETCH_FUNC fails with Closures)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@292107 c90b9560-bf6c-de11-be94-00142212c4b1